--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
   box-shadow: 0px 0px 25px 12px #fcfcfc, inset 0px 0px 25px 12px #fcfcfc;
 }
 .input-fiald > h1 {
-  color: #e2312b;
+  color: #2b9fe2;
   font-size: 24px;
   font-weight: bold;
 }
